// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots FocusManager no focusable children 1`] = `
<div
  style={
    Object {
      "color": "white",
      "margin": 100,
      "textAlign": "center",
    }
  }
>
  <p
    data-css-5g22k8=""
  >
    Tri-tip pork chop jowl, spare ribs shankle sirloin kevin. Ham hock tri-tip jowl, shank venison ham andouille rump salami swine sausage turducken beef ribs cupim jerky. Chuck swine shankle short loin tri-tip beef ribs leberkas andouille spare ribs shoulder buffalo ground round tongue sirloin bresaola. Kielbasa rump buffalo shoulder chicken beef brisket. Spare ribs drumstick tail cupim bacon filet mignon.
  </p>
</div>
`;

exports[`Storyshots FocusManager not trapped 1`] = `
<div
  style={
    Object {
      "color": "white",
      "margin": 100,
      "textAlign": "center",
    }
  }
>
  <p
    data-css-5g22k8=""
  >
    <a
      href="#"
    >
      Tri-tip pork chop jowl
    </a>
    , spare ribs shankle sirloin kevin. Ham hock tri-tip jowl, 
    <a
      href="#"
    >
      shank venison ham
    </a>
     
    andouille rump salami swine sausage turducken beef ribs cupim jerky. Chuck swine shankle short loin tri-tip beef ribs leberkas andouille spare ribs shoulder buffalo ground round tongue
     
    <a
      href="#"
    >
      sirloin bresaola
    </a>
    . Kielbasa rump buffalo shoulder chicken beef brisket. Spare ribs drumstick tail cupim bacon filet mignon.
  </p>
</div>
`;

exports[`Storyshots FocusManager trapped 1`] = `
<div
  style={
    Object {
      "color": "white",
      "margin": 100,
      "textAlign": "center",
    }
  }
>
  <p
    data-css-5g22k8=""
  >
    <a
      href="#"
    >
      Tri-tip pork chop jowl
    </a>
    , spare ribs shankle sirloin kevin. Ham hock tri-tip jowl, 
    <a
      href="#"
    >
      shank venison ham
    </a>
     
    andouille rump salami swine sausage turducken beef ribs cupim jerky. Chuck swine shankle short loin tri-tip beef ribs leberkas andouille spare ribs shoulder buffalo ground round tongue
     
    <a
      href="#"
    >
      sirloin bresaola
    </a>
    . Kielbasa rump buffalo shoulder chicken beef brisket. Spare ribs drumstick tail cupim bacon filet mignon.
  </p>
</div>
`;
